--- a/php.d/40-apcu.ini
+++ b/php.d/40-apcu.ini
@@ -1,6 +1,6 @@
+extension=apcu.so
 #Enable/Disable
 apc.enabled=1
-apc.apc.enable_cli=1
 # Memory Segments
 apc.shm_size=512M
 ## PHP file cache 1 hour ##
@@ -9,4 +9,3 @@ apc.ttl=3600
 apc.user_ttl=7200
 ## Garbage collection 1 hour ##
 apc.gc_ttl=3600
-apc.stat=0
