--- a/conf.d/glpi.conf
+++ b/conf.d/glpi.conf
@@ -1,7 +1,9 @@
-<Directory /var/www/html/glpi/>
-       Options Indexes FollowSymLinks
-       AllowOverride All
-       Require all granted
+<Directory /var/www/html/glpi/public>
+        Require all granted
+
+        RewriteEngine On
+
+        # Redirect all requests to GLPI router, unless file exists.
+        RewriteCond %{REQUEST_FILENAME} !-f
+        RewriteRule ^(.*)$ index.php [QSA,L]
 </Directory>
-ErrorLog /dev/stderr
-TransferLog /dev/stdout
