--- a/php.d/99-glpi.ini
+++ b/php.d/99-glpi.ini
@@ -6,3 +6,4 @@ register_globals = off ;
 magic_quotes_sybase = off ;
 session.auto_start = off ;
 session.use_trans_sid = 0 ;
+session.cookie_httponly = on;
